Change contract path
